# cpp_basic

./: CMakeLists.txt  Recruitment_cpp_cybersecurity_long.pptx  Recruitment_cpp_cybersecurity_short.pptx  main.cpp  modifier.cpp  modifier.h  randomstr.cpp  randomstr.h
include/: abstract_book.h  audio_book.h  book_registry.h  car.h  content_audio.h  content_e.h  content_paper.h  e_book.h  electric_car.h  paper_book.h  vehicle.h  vehicle_registry.h
include/enums/: book_formats.cpp  book_formats.h  book_types.h
include/interfaces/: ibook.h  ivehicle.h
src/: abstract_book.cpp  audio_book.cpp  book_registry.cpp  car.cpp  content_audio.cpp  content_e.cpp  content_paper.cpp  e_book.cpp  electric_car.cpp  paper_book.cpp  vehicle.cpp  vehicle_registry.cpp
